src/BadScript.Tests/tests/passing/operators/block/for/defaultExplicit_01.bs
v = 0
for i = 0 while< 10 step 1
{
	v = i
}
return v == 9