src/BadScript.Tests/tests/failing/invalid-syntax/invalidFor_01.bs
for i = 0 < 10
{
	
}